--- a/index3.html
+++ b/index3.html
@@ -15,7 +15,7 @@
 
 <body class="bg-black">
     <!--============Statistics-For-Today================ -->
-    <section id="statistics-today" class="pt_Statistics position-relative z-1 mw_1920">
+    <section id="statistics-today" class="pt_Statistics position-relative z-1 mw_1920 overflow-x-clip">
         <div class="Statisticsellips2 d-none d-md-block"></div>
         <div class="container mw_1164">
             <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-sm-4 mb-lg-5"><span
@@ -61,7 +61,7 @@
                     <div class="border_Statistics2 d-flex justify-content-center align-items-center pb-lg-2">
                         <div>
                             <p id="earningsIncreaseCounter" class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">
-                                <span class="counter" data-target="5"></span>x
+                                <span class="counter">5</span>x
                             </p>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
         </div>
     </section>
     <!--============Average-Earnings============== -->
-    <section class="py_average position-relative z-1 mw_1920">
+    <section class="py_average position-relative z-1 mw_1920 overflow-x-clip">
         <div class="Statisticsellips1 d-none d-xl-block"></div>
         <div class="Statisticsellips3  d-none d-xl-block"></div>
         <div class=" d-flex flex-md-row flex-column align-items-center average_gap  pe-md-3 pe-lg-4 pe-xl-5">
@@ -210,7 +210,7 @@
     <!-- counter -->
     <script>
         const options = {
-            threshold: 0.2, // Trigger when 20% of the element is visible
+            threshold: 0.10, // Trigger when 20% of the element is visible
         };
         const observer = new IntersectionObserver((entries) => {
             entries.forEach((entry) => {
